@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=${prefix}
+libdir=${exec_prefix}/lib
+includedir=${prefix}/include
+
+Name: libapol
+Description: SETools policy analysis library
+Version: @libapol_version@
+Requires: libqpol >= 1.3
+Conflicts:
+Libs: -L${libdir} -lapol
+Cflags: -I${includedir}/apol
